# pets_meme

./: README.md
pet-meme-generator/: main.py  pyproject.toml
pet-meme-generator/pet_meme_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pet-meme-generator/training/: train.py
