[tool.poetry]
name = "pet-meme-generator"
version = "0.1.0"
description = "AI-powered service to generate pet memes, GIFs, and videos"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
celery = "^5.3.6"
redis = "^5.0.1"
pillow = "^10.3.0"
moviepy = "^1.0.3"
python-multipart = "^0.0.7"
httpx = "^0.27.0"
jinja2 = "^3.1.4"

# AI 相关依赖
transformers = "^4.42.0"
diffusers = "^0.27.0"
torch = "^2.2.0"
accelerate = "^0.30.0"
safetensors = "^0.4.3"
opencv-python = "^4.9.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
