[project]
name = "pet-meme-generator"
version = "0.1.0"
description = "AI-powered service to generate pet memes, GIFs, and videos"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
    { name="lomoyun", email="lomoyun@gmail.com" }
]

dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.0",
    "celery==5.3.6",
    "redis==5.0.1",
    "pillow==10.3.0",
    "moviepy==1.0.3",
    "python-multipart==0.0.7",
    "httpx==0.27.0",
    "jinja2==3.1.4",
    "transformers==4.42.0",
    "diffusers==0.27.0",
    "torch==2.2.1",
    "accelerate==0.30.0",
    "safetensors==0.4.3",
    "opencv-python==4.9.0.80",
    "datasets==3.0.0",
    "xformers==0.0.25; sys_platform == 'win32'"
]


[tool.uv]
dev-dependencies = [
    "black==24.1.0",
    "ruff==0.4.0"
]

environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'linux'"
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = false

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
